fixed header nav on small screen, added a couple more todos.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,7 @@ footer {
 .footer .container .social-wrapper a {
 	text-decoration: none;
 }
+
+.footer .container .fab:hover {
+	color: #666;
+}
